--- a/README
+++ b/README
@@ -1,5 +1,6 @@
 Hangman, the classic game everyone has played...probably. Grab a buddy or two and think up some words and hints, then sit back a laugh maniaclly (or not) as 
-your superior linguistic genius confounds your hapless vict-er friends. Note: noreal creatures were actually hung in the making of hangman...except some coding bugs, but they had it coming.
+your superior linguistic genius confounds your hapless vict-er friends. Note: 
+no real creatures were actually hung in the making of hangman...except some coding bugs, but they had it coming.
 
 hangman can be called by:
 ./hangman [word to guess] [word hint]
